--- a/automatic/free-download-manager/free-download-manager.nuspec
+++ b/automatic/free-download-manager/free-download-manager.nuspec
@@ -1,9 +1,9 @@
 <?xml version="1.0"?>
 <package xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
   <metadata>
-    <id>FreeDownloadManager</id>
+    <id>free-download-manager</id>
     <title>Free Download Manager</title>
-    <version>1.1</version>
+    <version>6.14.0</version>
 	<authors>FreeDownloadManager.org</authors>
     <owners>hadron</owners>
     <summary>Free Download Manager</summary>
